Fixed content padding on safari

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -182,5 +182,5 @@ nav {
 }
 
 .content-wrapper-padding {
-  padding-top: 59px;
+  padding-top: 55px;
 }
